# VROOM

./: .clangd  .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_SETUP.md  VERSION_USAGE_EXAMPLE.md
.github/workflows/: ci.yml  release.yml
engine/: CMakeLists.txt
engine/include/vroom/asset/: Asset.hpp  AssetManager.hpp  AssetProvider.hpp  PackageFormat.hpp  ShaderAsset.hpp  ShaderCompiler.hpp
engine/include/vroom/components/: Transform.hpp
engine/include/vroom/core/: Component.hpp  Engine.hpp  Entity.hpp  Platform.hpp  Scene.hpp  SceneManager.hpp  Version.hpp.in
engine/include/vroom/logging/: ApplicationLogger.hpp  EngineLogger.hpp  LogCategory.hpp  LogLevel.hpp  LogMacros.hpp  Logger.hpp
engine/include/vroom/vulkan/: VulkanDevice.hpp  VulkanRenderer.hpp  VulkanSwapChain.hpp
engine/src/asset/: AssetManager.cpp  AssetProvider.cpp  ShaderCompiler.cpp
engine/src/components/: Transform.cpp
engine/src/core/: Component.cpp  Engine.cpp  Entity.cpp  Platform.cpp  Scene.cpp  SceneManager.cpp
engine/src/logging/: ApplicationLogger.cpp  EngineLogger.cpp  LogCategory.cpp  LogLevel.cpp  Logger.cpp
engine/src/vulkan/: VulkanDevice.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp
tests/: CMakeLists.txt
tests/components/: TransformTest.cpp
tests/core/: AssetManagerTest.cpp  ComponentLifecycleTest.cpp  EngineTest.cpp  EntityComponentTest.cpp  EntityHierarchyTest.cpp  SceneManagerTest.cpp  SceneTest.cpp
tests/logging/: LogCategoryTest.cpp  LogLevelTest.cpp  LoggerTest.cpp
tests/vulkan/: MockWindow.hpp  VulkanDeviceTest.cpp  VulkanSwapChainTest.cpp
tools/packager/: CMakeLists.txt  main.cpp
vroom_editor/: CMakeLists.txt
vroom_editor/src/: main.cpp
